--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # dependencies
 /node_modules
-/Api/node_modules
+node_modules
 C:\Users\oandr\Desktop\Proyect's\Proyects Js\GestiosHotelesBackEnd\GestionHotelesBackend\node_modules
 
 
